to check proportion

--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -60,8 +60,8 @@
     </div>
     <!--CARD SECTION-->
     <div class="boxSection">
-      <div class="cards row">
-        <div class="col-md-6">
+      <div class="cards row gap-5">
+        <div class="ict col-md-12">
           <div class="card-body">
             <h2 class="card-title">ICT</h2>
             <p class="card-text">
@@ -76,7 +76,7 @@
           </div>
         </div>
 
-        <div class="col-md-6 offset-md-6">
+        <div class="cyber col-md-12">
           <div class="card-body">
             <h2 class="card-title">Cybersecurity</h2>
             <p class="card-text">
@@ -92,7 +92,7 @@
           </div>
         </div>
 
-        <div class="col-md-6 offset-md-3">
+        <div class="professional col-md-12">
           <div class="card-body">
             <h2 class="card-title">Professional Services</h2>
             <p class="card-text">
@@ -130,22 +130,67 @@
     </div>
     <!--NUMBERS-->
     <div class="numbersSection">
-      <div class="row">
-        <div class="col">
-          <h2>50+</h2>
-          <p>Personale qualificato</p>
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <h2>50+</h2>
+            <p>Personale qualificato</p>
+          </div>
+          <div class="col">
+            <h2>50+</h2>
+            <p>Personale qualificato</p>
+          </div>
+          <div class="col">
+            <h2>24</h2>
+            <p>Consulenti e sales</p>
+          </div>
+          <div class="col">
+            <h2>50+</h2>
+            <p>Personale qualificato</p>
+          </div>
         </div>
-        <div class="col">
-          <h2>50+</h2>
-          <p>Personale qualificato</p>
-        </div>
-        <div class="col">
-          <h2>24</h2>
-          <p>Consulenti e sales</p>
-        </div>
-        <div class="col">
-          <h2>50+</h2>
-          <p>Personale qualificato</p>
+      </div>
+      <!--INFO SECTION-->
+      <!--CONTAINER FLUID????-->
+      <div class="infoSection">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="us">
+                <h2>Chi siamo</h2>
+                <p>
+                  DSMATIC è un System Integrator che unisce competenze
+                  verticali, esperienza pluriennale e presenza di settore.
+                  L’azienda conduce i suoi Clienti, tramite la tecnologia, al
+                  successo; s’innalzano pertanto i livelli prestazionali del
+                  core business aziendale elevando la competitività e
+                  l’efficenza operativa.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12">
+              <div class="innovation">
+                <h2>
+                  Innovazione e passione per la tecnologia sono il nostro DNA
+                </h2>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12 partner-container">
+              <div class="partner">
+                <h2>I nostri Partner</h2>
+                <p>
+                  DSMATIC collabora con i principali operatori ICT, i migliori
+                  Vendor di tecnologia con elevati livelli di partnership e le
+                  dovute certificazioni per poter esprimere competenza tecnica e
+                  sicurezza.
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
