--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -150,50 +150,157 @@
           </div>
         </div>
       </div>
-      <!--INFO SECTION-->
-      <!--CONTAINER FLUID????-->
-      <div class="infoSection">
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-md-12">
-              <div class="us">
-                <h2>Chi siamo</h2>
-                <p>
-                  DSMATIC è un System Integrator che unisce competenze
-                  verticali, esperienza pluriennale e presenza di settore.
-                  L’azienda conduce i suoi Clienti, tramite la tecnologia, al
-                  successo; s’innalzano pertanto i livelli prestazionali del
-                  core business aziendale elevando la competitività e
-                  l’efficenza operativa.
-                </p>
-              </div>
+    </div>
+    <!--INFO SECTION-->
+    <div class="infoSection">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="us">
+              <h2>Chi siamo</h2>
+              <p>
+                DSMATIC è un System Integrator che unisce competenze verticali,
+                esperienza pluriennale e presenza di settore. L’azienda conduce
+                i suoi Clienti, tramite la tecnologia, al successo; s’innalzano
+                pertanto i livelli prestazionali del core business aziendale
+                elevando la competitività e l’efficenza operativa.
+              </p>
             </div>
           </div>
-          <div class="row">
-            <div class="col-md-12">
-              <div class="innovation">
-                <h2>
-                  Innovazione e passione per la tecnologia sono il nostro DNA
-                </h2>
-              </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="innovation">
+              <h2>
+                Innovazione e passione per la tecnologia sono il nostro DNA
+              </h2>
             </div>
           </div>
-          <div class="row">
-            <div class="col-md-12 partner-container">
-              <div class="partner">
-                <h2>I nostri Partner</h2>
-                <p>
-                  DSMATIC collabora con i principali operatori ICT, i migliori
-                  Vendor di tecnologia con elevati livelli di partnership e le
-                  dovute certificazioni per poter esprimere competenza tecnica e
-                  sicurezza.
-                </p>
-              </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12 partner-container">
+            <div class="partner">
+              <h2>I nostri Partner</h2>
+              <p>
+                DSMATIC collabora con i principali operatori ICT, i migliori
+                Vendor di tecnologia con elevati livelli di partnership e le
+                dovute certificazioni per poter esprimere competenza tecnica e
+                sicurezza.
+              </p>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <footer></footer>
+    <!--LOGOS-->
+    <div class="logoSection">
+      <div class="row">
+        <div class="col-md-4"><div class="boxLogo">LOGO</div></div>
+        <div class="col-md-4"><div class="boxLogo">LOGO</div></div>
+        <div class="col-md-4"><div class="boxLogo">LOGO</div></div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-4"><div class="boxLogo">LOGO</div></div>
+        <div class="col-md-4"><div class="boxLogo">LOGO</div></div>
+        <div class="col-md-4"><div class="boxLogo">LOGO</div></div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-4"><div class="boxLogo">LOGO</div></div>
+        <div class="col-md-4"><div class="boxLogo">LOGO</div></div>
+        <div class="col-md-4"><div class="boxLogo">LOGO</div></div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-4"><div class="boxLogo">LOGO</div></div>
+        <div class="col-md-4"></div>
+        <div class="col-md-4"></div>
+      </div>
+    </div>
+    <footer>
+      <div class="container-fluid certifyContainer">
+        <div class="row">
+          <div class="col"><h2>Certificazioni ISO</h2></div>
+          <div class="col-md-1 logoText">
+            <img src="/landing_page/assets/image/ISOlogo.png" alert="ISO" />
+            <p>9001</p>
+          </div>
+          <div class="col-md-1 logoText">
+            <img src="/landing_page/assets/image/ISOlogo.png" alert="ISO" />
+            <p>2000</p>
+          </div>
+          <div class="col-md-1 logoText">
+            <img src="/landing_page/assets/image/ISOlogo.png" alert="ISO" />
+            <p>27001</p>
+          </div>
+          <div class="col-md-1 logoText">
+            <img src="/landing_page/assets/image/ISOlogo.png" alert="ISO" />
+            <p>14001</p>
+          </div>
+          <div class="col-md-1 logoText">
+            <img src="/landing_page/assets/image/ISOlogo.png" alert="ISO" />
+            <p>37001</p>
+          </div>
+          <div class="col-md-1 logoText">
+            <img src="/landing_page/assets/image/ISOlogo.png" alert="ISO" />
+            <p>45001</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12 rightText">
+            <p class="moduleDescription">
+              Compila il modulo di contatto per richiedere maggiori informazioni
+              sui nostri servizi
+            </p>
+          </div>
+        </div>
+        <div class="row contact">
+          <div class="col-md-6">
+            <h2>Contatti</h2>
+            <div class="contactLogoText">
+              <img
+                src="/landing_page/assets/image/IconLocation.png"
+                alt="Address"
+              />
+              <p>Via Salaria 298/A | 00199 Roma</p>
+            </div>
+            <div class="contactLogoText">
+              <img src="/landing_page/assets/image/iconPhone.png" alt="Phone" />
+              <p>+39 06.45252080</p>
+            </div>
+            <div class="contactLogoText">
+              <img src="/landing_page/assets/image/iconEmail.png" alt="Email" />
+              <p>info@dsmatic.it</p>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="row"></div>
+            <div class="row"></div>
+            <div class="row"></div>
+            <div class="row"></div>
+            <div class="row"></div>
+            <div class="row"></div>
+          </div>
+        </div>
+        <div class="col-md-12">
+          <div class="social">
+            <img src="" alt="" /><img src="" alt="" /><img src="" alt="" />
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <p class="copyright">
+            Copyright © 2024 DSMATIC SpA - Via Salaria, 298/A - 00199 Roma -
+            Codice Fiscale e Partita Iva: 14936011007 - Capitale Sociale . €
+            300.000,00 i.v. - REA: RM - 1556452 - SDI: USAL8PV- Mail:
+            info@dsmatic.it - PEC: scainet@legalmail.it - <a href=""
+              >Privacy Policy</a
+            > - <a href="">Cookie Policy </a>
+          </p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
