--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -219,6 +219,7 @@
       </div>
     </div>
     <footer>
+      <!--CERTIFY SECTION-->
       <div class="container-fluid certifyContainer">
         <div class="row">
           <div class="col"><h2>Certificazioni ISO</h2></div>
@@ -247,6 +248,7 @@
             <p>45001</p>
           </div>
         </div>
+        <!--FORM DESCRIPTION-->
         <div class="row">
           <div class="col-md-12 rightText">
             <p class="moduleDescription">
@@ -255,6 +257,7 @@
             </p>
           </div>
         </div>
+        <!--CONTACT SECTION-->
         <div class="row contact">
           <div class="col-md-6">
             <h2>Contatti</h2>
@@ -274,21 +277,76 @@
               <p>info@dsmatic.it</p>
             </div>
           </div>
-          <div class="col-md-6">
-            <div class="row"></div>
-            <div class="row"></div>
-            <div class="row"></div>
-            <div class="row"></div>
-            <div class="row"></div>
-            <div class="row"></div>
+          <!--FORM SECTION-->
+          <div class="col-md-6 form">
+            <div class="mb-3">
+              <label for="formGroupExampleInput" class="form-label"
+                >Nome*</label
+              >
+              <input
+                type="text"
+                class="form-control"
+                id="formGroupExampleInput"
+              />
+            </div>
+            <div class="mb-3">
+              <label for="formGroupExampleInput2" class="form-label"
+                >Cognome *</label
+              >
+              <input
+                type="text"
+                class="form-control"
+                id="formGroupExampleInput2"
+              />
+            </div>
+            <div class="mb-3">
+              <label for="formGroupExampleInput2" class="form-label"
+                >Numero di telefono*</label
+              >
+              <input
+                type="text"
+                class="form-control"
+                id="formGroupExampleInput2"
+              />
+            </div>
+            <div class="mb-3">
+              <label for="formGroupExampleInput2" class="form-label"
+                >Messaggio*</label
+              >
+              <input
+                type="text"
+                class="form-control"
+                id="formGroupExampleInput2"
+              />
+            </div>
+            <div class="form-check check">
+              <input class="form-check-input" type="checkbox" id="gridCheck" />
+              <label class="form-check-label" for="gridCheck">
+                Acconsento alla vostra informativa sulla privacy.*
+              </label>
+            </div>
+            <div>
+              <a href="#" class="btn btn-primary sendBtn">invia</a>
+            </div>
           </div>
         </div>
+        <!--SOCIAL ICON SECTION-->
         <div class="col-md-12">
           <div class="social">
-            <img src="" alt="" /><img src="" alt="" /><img src="" alt="" />
+            <img
+              src="/landing_page/assets/image/igIcon.png"
+              alt="Instagram"
+            /><img
+              src="/landing_page/assets/image/linkedinicon.png"
+              alt="Linkedin"
+            /><img
+              src="/landing_page/assets/image/facebookIcon.png"
+              alt="Facebook"
+            />
           </div>
         </div>
       </div>
+      <!--FINAL SECTION-->
       <div class="row">
         <div class="col-md-12">
           <p class="copyright">
