--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="assets/css/boostrap.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/fonts/style.css" />
-    <title>Document</title>
+
+    <title>DSMatic</title>
   </head>
 
   <body>
@@ -132,20 +133,20 @@
     <div class="numbersSection">
       <div class="container">
         <div class="row">
-          <div class="col">
-            <h2>50+</h2>
+          <div class="col counters">
+            <h2 data-count="50">50+</h2>
             <p>Personale qualificato</p>
           </div>
-          <div class="col">
-            <h2>50+</h2>
+          <div class="col counters">
+            <h2 data-count="50">50+</h2>
             <p>Personale qualificato</p>
           </div>
-          <div class="col">
-            <h2>24</h2>
+          <div class="col counters">
+            <h2 data-count="24">24</h2>
             <p>Consulenti e sales</p>
           </div>
-          <div class="col">
-            <h2>50+</h2>
+          <div class="col counters">
+            <h2 data-count="50">50+</h2>
             <p>Personale qualificato</p>
           </div>
         </div>
@@ -360,5 +361,6 @@
         </div>
       </div>
     </footer>
+    <script src="assets/javascript/script.js"></script>
   </body>
 </html>
